bad/assign_field_bool_new_class_string.example_compiler_output
ERROR
[1mbad/assign_field_bool_new_class_string.lat:7:14: [1;31merror: [0;1massigning to `boolean` from incompatible type `string`[m
	(new C).fld = "";
	            [1;32m^[m
